id유효성검사 끝
--id 유효성검사끝 --

--- a/dbproject/src/main/resources/application.yml
+++ b/dbproject/src/main/resources/application.yml
@@ -10,6 +10,9 @@ server:
 # ddl-auto: none 는 서버실행시 가만히 놔둠
 #
 spring:
+    mustache: 
+      expose-session-attributes: true
+
     datasource:
             url: jdbc:mariadb://localhost:3306/greendb
             driver-class-name: org.mariadb.jdbc.Driver
