--- a/dbproject/src/main/resources/application.yml
+++ b/dbproject/src/main/resources/application.yml
@@ -22,13 +22,24 @@ spring:
     jpa:
         open-in-view: false
         hibernate:
+        
             ddl-auto: update
             naming:
                 physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
             use-new-id-generator-mappings: false
         show-sql: true
+        properties:
+            hibernate:
+                format_sql: true
+                [use_sql_comments: true]
+
        
     output:
         ansi:
             enabled: always
 
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
